test/scc/expr/semantic-errors/126.a
126.t:4:22: error: expression must have arithmetic type